--- a/src/components/Styles/Detail.module.css
+++ b/src/components/Styles/Detail.module.css
@@ -122,3 +122,12 @@
     background: rgb(112, 0, 0);
     border: 1px solid #ffff;
 }
+
+@media (max-width: 575px) {
+    }
+@media (max-width: 991.98px) {
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
