--- a/src/components/Styles/Home.module.css
+++ b/src/components/Styles/Home.module.css
@@ -59,12 +59,14 @@
 }
 .link{
     text-decoration: none;
+    width: 22%;
 }
 .btn{
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 150px;
+    /* width: 150px; */
+    padding: 20px;
     height: 40px;
     color: #fff;
     background: rgb(150, 0, 0);
@@ -87,27 +89,22 @@
     width: 90%;
     min-height: 88vh;
     height: auto;
-    display: grid; 
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 2fr);
-    grid-gap: 50px;
-    /* grid-template-areas: 
-    ". . .";  */
-    justify-content: space-around; 
-    align-content: space-evenly; 
-    justify-items: center; 
+    display: flex;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 3%;
     margin-bottom: 30px;
 }
 
 .img{
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 5px;
 }
 
 .card{
-    width: 300px;
+    width: 100%;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -119,6 +116,7 @@
     border-radius: 4px;
     animation: show .5s;
     transition: all .2s;
+    margin-bottom: 15px;
 }
 .card:hover{
     box-shadow: none;
@@ -193,24 +191,20 @@
     width: 90%;
     min-height: 88vh;
     height: auto;
-    display: grid; 
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 2fr);
-    grid-gap: 50px;
-    /* grid-template-areas: 
-    ". . .";  */
-    justify-content: space-around; 
-    align-content: space-evenly; 
-    justify-items: center; 
+    display: flex;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 3%;
     margin-bottom: 30px;
 }
 
 .cardSeries{
-    width: 100%;
+    width: 30%;
     height: 350px;
     background: rgb(255, 174, 0);
     border-radius: 5px;
+    margin-top: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -227,14 +221,14 @@
     text-align: center;
 }
 .contCard{
-    width: 70%;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
 }
 .contCard div{
-    width: 50%;
+    width: 48%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -257,4 +251,27 @@
 }
 .linkHome:hover{
     background: #fff;
+}
+@media (max-width: 575px) {
+    .cardSeries{ width: 100%; }
+    }
+@media (max-width: 991.98px) {
+    .cardSeries{ width: 80%; }
+    .nav{
+        height: auto;
+        justify-content: center;
+        flex-direction: column;
+        background: rgb(20, 20, 20);
+        padding: 10px;
+    }
+    .containerSearch{
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .btn{
+        margin-bottom: 10px;
+    }
+    .link{
+        width: 40%;
+    }
 }
