--- a/src/components/Styles/Landing.module.css
+++ b/src/components/Styles/Landing.module.css
@@ -30,7 +30,8 @@
     height: 40vh;
 }
 .containerBtn{
-    width: 50%;
+    /* width: 50%; */
+    width: auto;
     height: 20%;
     display: flex;
     justify-content: space-between;
@@ -46,6 +47,7 @@
     justify-content: center;
     width: 150px;
     height: 45px;
+    margin: 20px;
     background-color: rgb(0, 0, 0);
     color: #fff;
     align-items: center;
@@ -64,3 +66,4 @@
     -webkit-box-shadow: 8px 5px 15px -2px #000000; 
     box-shadow: 8px 5px 15px -2px #000000
 }
+
