--- a/src/components/Styles/Landing.module.css
+++ b/src/components/Styles/Landing.module.css
@@ -5,7 +5,7 @@
     font-family: sans-serif;
 }
 .container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,0,0,1) 44%, rgba(255,0,0,1) 100%);
@@ -13,6 +13,11 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+}
+.h1{
+    width: 100%;
+    text-align: center;
+    font-size: 80px;
 }
 .cont{
     font-size: 24px;
@@ -25,8 +30,6 @@
 }
 .img{
     width: 40vw;
-    min-width: 25rem;
-    min-height: 25rem;
     height: 40vh;
 }
 .containerBtn{
@@ -67,3 +70,12 @@
     box-shadow: 8px 5px 15px -2px #000000
 }
 
+@media (max-width: 575px) {
+    body{
+        width: 100%;
+        height: auto;
+    }
+    .containerBtn{
+        flex-direction: column;
+    }
+}
