--- a/src/components/Styles/Landing.module.css
+++ b/src/components/Styles/Landing.module.css
@@ -7,17 +7,37 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,0,0,1) 44%, rgba(255,0,0,1) 100%);
+    background-image: url("https://i.pinimg.com/originals/32/81/bb/3281bbb916dc95b8bef4e52e24a8cc8b.gif");
+    position: fixed;
+    z-index: 10;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 300px;
+}
+.img{
+    width: 100%;
+    height: 100%;
+}
+.divTitle{
+    width: 40%;
+    text-align: center;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.5);
+    background: rgb(200, 0, 0);
+    margin-bottom: 10px;
 }
 .h1{
-    width: 100%;
+    padding: 20px;
     text-align: center;
     font-size: 80px;
+    color: #fff;
+}
+.title{
+    color: #fff;
+    padding: 20px;
 }
 .cont{
     font-size: 24px;
@@ -33,7 +53,6 @@
     height: 40vh;
 }
 .containerBtn{
-    /* width: 50%; */
     width: auto;
     height: 20%;
     display: flex;
@@ -51,7 +70,7 @@
     width: 150px;
     height: 45px;
     margin: 20px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(200, 0, 0);
     color: #fff;
     align-items: center;
     justify-content: center;
@@ -62,9 +81,11 @@
     text-transform: uppercase;
     transition: .3s all;
     border-radius: 5px;
+    box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.5);
 }
 .boton:hover{
-    background: rgb(150, 0, 0);
+    color: rgb(200, 0, 0);
+    background: #fff;
     font-size: 19px;
     -webkit-box-shadow: 8px 5px 15px -2px #000000; 
     box-shadow: 8px 5px 15px -2px #000000
